fix: 선택 항목은 값이 있을 때만 반영(수동·최소 열 등록이 기존 값을 지우던 문제) · 최종조사내용 text 전환 · 압축 해제 상한 · 좌표 문자열 로케일 고정